--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -115,6 +115,13 @@ flutter:
     - assets/please.png
     - assets/thankyou.png
     - assets/videos/fsl.mp4
+    - assets/videos/family.mp4
+    - assets/videos/home.mp4
+    - assets/videos/food.mp4
+    - assets/videos/greetings.mp4
+    - assets/videos/alphabet.mp4
+    - assets/videos/beginner.mp4
+
 
 
 
