--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,18 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_animate: ^2.0.0
-  camera: ^0.9.8+1
-  permission_handler: ^10.0.0
+  camera: ^0.10.0+2
+  permission_handler: ^10.2.0
   provider: ^6.0.0
   http: ^0.13.3
   tflite_flutter: ^0.9.0
   tflite_flutter_helper: ^0.2.1
   video_player: ^2.5.1
+  image: ^3.0.1
+  collection: ^1.16.0
+  tflite: ^1.1.2
+  path_provider: ^2.0.9
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -121,6 +126,8 @@ flutter:
     - assets/videos/greetings.mp4
     - assets/videos/alphabet.mp4
     - assets/videos/beginner.mp4
+    - assets/models.tflite
+    - assets/labels.txt
 
 
 
