--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,8 +29,11 @@ android {
 
         // Specify ABI filters for TensorFlow Lite
         ndk {
-            abiFilters "armeabi-v7a", "arm64-v8a"
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64" // Include all required architectures
         }
+
+        // Enable multiDex if required for large applications
+        multiDexEnabled true
     }
 
     compileOptions {
@@ -46,12 +49,19 @@ android {
         }
     }
 
+    // Configure source sets to include the jniLibs folder
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['src/main/jniLibs']
+        }
+    }
+
     flutter {
         source '../..'
     }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    // Add additional dependencies here if needed
+    implementation 'org.tensorflow:tensorflow-lite:2.9.0' // or the latest stable version
+    implementation 'androidx.multidex:multidex:2.0.1' // Added for multiDex support
 }
