--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,11 +1,18 @@
 pluginManagement {
     def flutterSdkPath = {
-        def properties = new Properties()
-        file("local.properties").withInputStream { properties.load(it) }
-        def flutterSdkPath = properties.getProperty("flutter.sdk")
+        def propertiesFile = file("local.properties")
+        assert propertiesFile.exists(), "local.properties file not found"
+
+        def flutterSdkPath = null
+        propertiesFile.eachLine { line ->
+            if (line.startsWith("flutter.sdk")) {
+                flutterSdkPath = line.split("=")[1].trim()
+            }
+        }
         assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
         return flutterSdkPath
     }
+
     settings.ext.flutterSdkPath = flutterSdkPath()
 
     includeBuild("${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle")
