--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,39 +1,19 @@
 name: sign_language
 description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
 environment:
   sdk: '>=3.3.0 <4.0.0'
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
   flutter_animate: ^2.0.0
   camera: ^0.10.0+2
   permission_handler: ^10.2.0
-  provider: ^6.0.0
+  provider: ^6.0.3
   http: ^0.13.3
   tflite_flutter: ^0.9.0
   tflite_flutter_helper: ^0.2.1
@@ -43,29 +23,18 @@ dependencies:
   tflite: ^1.1.2
   path_provider: ^2.0.9
   logger: ^1.1.0
-
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  firebase_core: ^2.14.0  # Ensure this is a compatible version
+  cloud_firestore: ^4.11.0  # Ensure this is a compatible version
+  flutter_rating_bar: ^4.0.1  # Ensure this is up to date
   cupertino_icons: ^1.0.6
   speech_to_text: ^6.1.1
   avatar_glow: ^2.0.2
-
+  firebase_analytics: ^10.2.0  # Ensure this matches your Firebase setup
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.0
-
 
 flutter_icons:
   android: true
@@ -74,10 +43,6 @@ flutter_icons:
   adaptive_icon_background: "#FFA500"
   adaptive_icon_foreground: "assets/ic_launcher.png"
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
   uses-material-design: true
   assets:
@@ -114,7 +79,6 @@ flutter:
     - assets/letters/
     - assets/gif/
     - assets/ic_launcher.png
-    - assets/hello.png
     - assets/goodbye.png
     - assets/no.png
     - assets/yes.png
@@ -133,34 +97,15 @@ flutter:
     - assets/labels2.txt
     - assets/models1.tflite
     - assets/labels1.txt
-
-
-
-
-
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+    - assets/Hi.png
+    - assets/GoodNoon.png
+    - assets/GoodMorning.png
+    - assets/GoodAfternoon.png
+    - assets/GoodNight.png
+    - assets/Hello.png
+    - assets/name.png
+    - assets/surname.png
+    - assets/familyname.png
+    - assets/nickname.png
+    - assets/shortname.png
+    - assets/age.png
