--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   speech_to_text: ^6.1.1
   avatar_glow: ^2.0.2
   firebase_analytics: ^10.2.0  # Ensure this matches your Firebase setup
+  shared_preferences: ^2.3.3
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
